implemented Printer abstraction to allow different print formats